--- a/window.html
+++ b/window.html
@@ -6,7 +6,7 @@
     <script src="index.js"></script>
   </head>
   <body>
-    <div>
+    <div id="tabBar">
       <button id="back">Back</button>
       <button id="forward">Forward</button>
       <button id="reload">reload</button>
