--- a/window.html
+++ b/window.html
@@ -14,6 +14,6 @@
         <input id="search" type="text" value="shit is broken" ></input>
       </form>
     </div>
-  <webview id="web" src="http://www.google.com/" autosize="on" minwidth="576" minheight="432"></webview>
+  <webview id="web" src="http://www.google.com/"></webview>
   </body>
 </html>
